Fixed overflow visible on cards

--- a/assets/scss/constants.scss
+++ b/assets/scss/constants.scss
@@ -14,8 +14,8 @@ $main-primary_dark: #0e2349;
 $main-secondary: #a5cf39;
 $main-secondary_tint: #cafc4b24;
 $main-secondary_dark: #86bb00;
-$background: #f0f0f0;
-$container: #ffffff6f;
+$background: #f6f6f6;
+$container: #ffffff83;
 $container-item: #fafafa;
 $accent1: #7c2d3a;
 $accent1_light: #a42238;
